# tebindgen

./: .travis.yml  Cargo.toml  LICENSE  README.md
ci/travis/: before_install.sh  install.sh
res/test/: api.h
res/test/define_value_test/: define_value.test.c
res/test/generate_fn_test/: fn0.test.c  fn1.test.c  fn2.test.c  hidden_fn.test.c
res/test/generate_struct_test/: empty.test.c  fields.test.c  forward.test.c  fwdfields.test.c
res/test/generate_var_test/: hidden.test.c  test.c
res/test/hidden/: fn.test.c  var.test.c
res/test/include_test/includes/: test.h
src/: ir.rs  lib.rs
src/testdata/: api.h
src/testdata/define_test/: define.test.c
